welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:11: error: ';' expected but 'else' found.
	else if (litMessage() == "L")
        ^BDRBuggle:14: error: ';' expected but 'else' found.
	else if (litMessage() == "I")
        ^BDRBuggle:18: error: ';' expected but 'else' found.
	else if (litMessage() == "A")
        ^BDRBuggle:20: error: ';' expected but 'else' found.
	else if (litMessage() == "B")
        ^BDRBuggle:23: error: ';' expected but 'else' found.
	else if (litMessage() == "C")
        ^BDRBuggle:27: error: ';' expected but 'else' found.
	else if (litMessage() == "Z")
        ^BDRBuggle:29: error: ';' expected but 'else' found.
	else if (litMessage() == "Y")
        ^BDRBuggle:32: error: ';' expected but 'else' found.
	else if (litMessage() == "X")
        ^